apps/fui/src/styles/local/partials/2-components/minimalist-sidebar/minimalist-sidebar.scss
@use '@carbon/react/scss/spacing' as *;
@use '../../../../config/breakpoints' as breakpoints;
@use '../../../mixins/text-mixins' as *;
@use 'helper-mixins' as *;

@import 'nav-links.scss';

.minimalist-sidebar {
    // defined in layouts to ensure smoother animations
    width: var(--sidebar-width);
    // sidebar is always visible over all other layers except the overlay
    height: 100vh;

    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;

    @include text();
    border: 1.25px solid var(--border);
    border-radius: 12px;

    .page-links {
        height: 50%;
    }

    .top-section {
        display: flex;
        align-items: center;
        justify-content: center;
        column-gap: $spacing-06;
        min-height: 20%;
    }

    .page-links,
    .top-section,
    .social-links {
        // default color when inactive - this colour is set to something more readable once expanded
        background-color: transparent;
        border-radius: 12px;
        position: relative;
    }
}

/* header moves to top of page - change flex direction and simplify layout */
@media (min-width: breakpoints.$portrait-min) and (max-width: breakpoints.$portrait-max) {
    .minimalist-sidebar {
        height: 100px;
        flex-direction: row;
        padding: $spacing-04 $spacing-06;
        width: 100%;

        .nav-links {
            display: none;
        }

        .top-section {
            width: 100%;
            justify-content: flex-start;
        }
    }

    .minimalist-sidebar-active {
        position: absolute;
        top: 0;
        height: 100%;
        z-index: var(--layers-overlay);

        // revert menu to use the column layout as used on the full-screen design
        @include sidebar-element-alignments();
        animation: fade-in var(--sequence-fast);

        .top-section {
            width: 40%;
            justify-content: space-between;
        }

        .nav-links {
            display: inherit;
        }

        .page-links {
            height: 50%;
        }

        .page-links,
        .top-section,
        .social-links {
            // for readability
            background-color: var(--background-details);
            padding: $spacing-06;
        }
    }
}

/* toggling the sidebar-heading shifts the layout around - but only for larger screens */
@media (min-width: breakpoints.$portrait-max) {
    .minimalist-sidebar-active {
        animation: minimalist-sidebar-fade-in var(--sequence-fast) ease-out
            forwards;
        padding: 0 $spacing-04;

        .labelled-icon-btn,
        .labelled-icon-btn > span {
            animation: fade-in var(--sequence-slow);
        }

        .top-section,
        .nav-links {
            width: 100%;
        }

        .top-section {
            justify-content: space-between;
        }

        .page-links,
        .top-section,
        .social-links {
            // for readability
            background-color: var(--background-details);
            padding: $spacing-06;
        }
    }

    .minimalist-sidebar-inactive {
        animation: minimalist-sidebar-fade-out var(--sequence-fast) ease-out
            forwards;

        .icon-btn {
            animation: fade-in var(--sequence-slow);
        }
    }
}

